--- a/index.html
+++ b/index.html
@@ -78,15 +78,31 @@
           </div>
           
         </form>
+        <button>SUBMIT</button>
     </div>
     <br>
     <br>
     <br>
     <br>
+    <p>
+      <hr>
+    </p>
+    <p style="color: white;font-size: x-large;margin-left: 70px;">
+      MY PAST PROJECTS:
+    </p>
+    <p>
+      <ul style="color: rgb(88, 139, 184); margin-left: 70px;">
+        <li><a href="pages/Sahil/index.html" id="ab">Introduction to HTML</a></li>
+      </ul>
+    </p>
+    <br>
+    <br>
+    <hr>
     <h3 id="fc">
-        For more info you can check my facebook and instagram handle.Link for the same is mentioned below.<br>
-        <a href="https://www.facebook.com/profile.php?id=100013299840022"><img src="assets/image/facebook_Logo.png" height="50px" width="50px" style="margin-left: 0px;"></a>
-        <a href="https://instagram.com/iamsahil_2703?igshid=d9woqfbi2b4n"><img src="assets/image/Ig.png" height="50px" width="50px" style="margin-left: 20px;"></a>
+      For more info you can check my facebook and instagram handle.Link for the same is mentioned below:<br>
+      <a href="https://www.facebook.com/profile.php?id=100013299840022"><img src="assets/image/facebook_Logo.png" height="50px" width="50px" style="margin-left: 0px;"></a>
+      <a href="https://instagram.com/iamsahil_2703?igshid=d9woqfbi2b4n"><img src="assets/image/Ig.png" height="50px" width="50px" style="margin-left: 20px;"></a>
+      <a href="https://www.snapchat.com/add/iamsahil_2703"><img src="https://pngimg.com/uploads/snapchat/snapchat_PNG6.png" height="50px" width="50px" style="margin-left: 20px;"></a>  
     </h3>
     <hr>
 </body>
